[project]
name = "mcp-server-mongodb"
version = "0.1.0"
description = "A MCP MongoDB Server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=0.9.1",
    "pymongo>=4.6.0",
    "python-dotenv>=1.0.0"
]
[[project.authors]]
name = "John Yearsley"
email = "jhyearsley24@gmail.com"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
mcp-server-mongodb = "mcp_server_mongodb:main"
